Fixed splash page not showing up

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -18,12 +18,12 @@ body {
   font-family: Ghostlight;
 }
 
-#app {
+.background-image {
   overflow-y: auto;
   position: relative;
 }
 
-#app:before {
+.background-image:before {
   content: "";
   position: fixed;
   left: 0;
